fixed width of quantity price on mobilescreen

--- a/src/Components/CartScreen.css
+++ b/src/Components/CartScreen.css
@@ -103,7 +103,7 @@
   }
 }
 
-@media screen and (max-width: 350px) {
+@media screen and (max-width: 380px) {
   .item-title {
     flex: 0.5;
   }
